# VM-Dashboard-og-Predikering

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260614_0001_initial.py
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/commands/: ingest.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  domain.py
apps/api/app/schemas/: __init__.py  domain.py
apps/api/app/services/: api_football.py  broadcasts.py  external_data.py  historical.py  live_probability.py  match_import.py  player_import.py  prediction.py  processed_data.py  rate_limit.py  schedule_data.py  seed_data.py  simulation.py
apps/api/tests/: test_match_import.py  test_player_import.py  test_prediction.py  test_rate_limit.py
apps/web/: .dockerignore  .vercelignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: BroadcastLinksCard.tsx  DataFlowStatus.tsx  DataProvenance.tsx  FormationPitch.tsx  Leaderboards.tsx  LiveTicker.tsx  MatchCard.tsx  MatchEventTimeline.tsx  MatchParticipant.tsx  MatchSchedule.tsx  ModelExplanationCard.tsx  PlayerCard.tsx  PredictionForm.tsx  TeamBadge.tsx  (+4 more)
data/processed/: matches.json
data/seed/: world_cup_seed.json
docs/: architecture.md  data-sources.md  deploy.md  model.md  roadmap.md  system-overview.md
ml/: README.md
ml/training/: README.md
(+17 files in other folders)
