[project]
name = "world-cup-insights-api"
version = "0.2.0"
description = "FastAPI backend for World Cup analytics, predictions and Norwegian broadcast links."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.111.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.1.0",
  "sqlalchemy>=2.0.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
worldcup-ingest = "app.commands.ingest:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
